gtest = dependency('gtest', main: true)
test(
    'Geometry',
    executable(
        'Geometry_test.cc',
        sources: ['Geometry_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'IsSymmetric',
    executable(
        'IsSymmetric_test',
        sources: ['IsSymmetric_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'MergeSort',
    executable(
        'MergeSort_test',
        sources: ['MergeSort_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'Polynomial',
    executable(
        'Polynomial_test.cc',
        sources: ['Polynomial_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)
test(
    'Where',
    executable(
        'Where_test.cpp',
        sources: ['Where_test.cpp'],
        include_directories: src,
        dependencies: [gtest]
    )
)